--- a/resources.yml
+++ b/resources.yml
@@ -1,7 +1,7 @@
 resources:
   - name: nginx
     type: image
-    integration: aye-docker #your account integration
+    integration: "trriplejay docker hub" #your account integration
     source:
       name: "library/nginx"
       isPull: false
@@ -9,15 +9,15 @@ resources:
 
   - name: busybox
     type: image
-    integration: aye-docker #your account integration
+    integration: "trriplejay docker hub" #your account integration
     source:
       name: "library/busybox"
       isPull: true
       tag: latest
 
-  - name: samplePyt
+  - name: samplePython
     type: gitRepo
     integration: github
     source:
-      name: "pranaypareek/sample_python" #you should've access to this project (even if it's public)
+      name: "trriplejay/sample_python" #you should've access to this project (even if it's public)
       branch: master
